# omislisi-accounting

./: .cursorrules  .gitignore  .sops.yaml  README.md  config.yaml.example  fabfile.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup_venv.sh
deploy/: README.md  nginx.conf
deploy/production/: .gitkeep  htpasswd
omislisi_accounting/: __init__.py  config.py
omislisi_accounting/analysis/: __init__.py  counterparty_utils.py  dashboard_data.py  reporter.py
omislisi_accounting/cli/: __init__.py  main.py
omislisi_accounting/domain/: __init__.py  categories.py
omislisi_accounting/parsers/: __init__.py  bank_parser.py  base.py  parser_factory.py  paypal_parser.py  zip_handler.py
omislisi_accounting/templates/: __init__.py  base.html  renderer.py
omislisi_accounting/templates/static/: dashboard.css  dashboard.js
scripts/: update_dashboard.sh
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_config.py  test_counterparty_utils.py  test_dashboard_data.py  test_domain.py  test_parsers.py  test_renderer.py  test_zip_handler.py
